--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
   
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
   <div class="bg-top"></div>
@@ -28,20 +24,31 @@
   <div class="container">
     <div class="bg-card"></div>
     <div class="txt-card">
-      Victor Crest
-      26
-      London
-      80K
-      Followers
-      803K
-      Likes
-      1.4K
-      Photos
+      <div class="img-victor"></div>
+      <div class="name">
+        <h1>Victor Crest <span>26</span></h1>
+      </div>
+      <h2>London</h2>
+      <div class="line"></div>
+      <div class="description">
+        <div class="des">
+          <span class="number">80K</span>
+          <span class="txt">Followers</span>
+        </div>
+        <div class="des">
+          <span class="number">803K</span>
+          <span class="txt">Likes</span>
+        </div>
+        <div class="des">
+          <span class="number">1.4K</span>
+          <span class="txt">Photos</span>
+        </div>
+      </div>
     </div>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Dyego henrique</a>.
   </div>
 </body>
 </html>
