--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Dyego henrique</a>.
+    Coded by <a href="https://github.com/dyegohrq/profile-card-component-main" target="_blank">Dyego henrique</a>.
   </div>
 </body>
 </html>
